@@ -1,5 +1,10 @@
 2021-03-22 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/gen.c:
+	  Fix a bug in tlcs90 interrupt handling.
+
+2021-03-22 Philipp Klaus Krause <pkk AT spth.de>
+
 	* doc/sdccman.lyx,
 	  src/z80/gen.c,
 	  src/z80/main.c,
